// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BadgePrinterSystemTab should change status filter 1`] = `
<div>
  <div
    class="makeStyles-filterActionsContainer-828 makeStyles-filterActionsContainerPadding-830"
  >
    <div
      class="MuiBox-root MuiBox-root-883 makeStyles-filterStatusContainer-831 makeStyles-leftFilterStatusContainer-835"
    >
      <div
        class="makeStyles-floatingFilterWrapper-837 makeStyles-filterWrapper-836  floatingFilterWrapper"
      >
        <span
          class="makeStyles-floatingFilterButton-838"
          data-testid="controlled-button"
          tabindex="-1"
        >
          <button
            aria-controls="false"
            aria-haspopup="true"
            class="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-buttonFilter-846"
            data-testid="button-filter-open"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label"
            >
              Available
              <span
                class="MuiButton-endIcon MuiButton-iconSizeMedium"
              >
                <svg
                  class="makeStyles-dropdownIcon-840"
                >
                  expand.svg
                </svg>
              </span>
            </span>
          </button>
        </span>
      </div>
    </div>
  </div>
  Loading...
  <div
    class="MuiDrawer-root MuiDrawer-docked makeStyles-drawer-938 makeStyles-close-949 closed"
    data-testid="bps-drawer-detail"
  >
    <div
      class="MuiPaper-root MuiDrawer-paper makeStyles-drawerPaper-939 MuiDrawer-paperAnchorRight MuiDrawer-paperAnchorDockedRight MuiPaper-elevation0"
      style="visibility: hidden; webkit-transform: translateX(1024px) translateX(0px); transform: translateX(1024px) translateX(0px);"
    >
      <div
        class="makeStyles-drawerButtonWrapper-941"
      >
        <div
          class="makeStyles-drawerButton-942"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-text"
            data-testid="drawer-close-btn"
            style="outline: none;"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label"
            >
              <svg>
                close.svg
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
        <div
          class="makeStyles-drawerHeader-940"
        >
          <p
            class="MuiTypography-root makeStyles-drawerTitle-943 MuiTypography-body1 MuiTypography-colorPrimary MuiTypography-alignLeft"
          >
            BPS Information
          </p>
        </div>
      </div>
      <div
        class="makeStyles-listDetail-928"
      >
        <div
          class="makeStyles-summaryDeviceDetail-955"
        >
          <div
            class="makeStyles-company-959"
          >
            <div
              class="makeStyles-drawerOverflowWrapper-974"
            >
              <div
                class="makeStyles-drawerText-966"
              >
                <p
                  class="MuiTypography-root makeStyles-deviceAccent-960 makeStyles-entityTitle-969 MuiTypography-body1"
                />
                <div
                  class="makeStyles-drawerMainText-967"
                >
                  <span>
                    No project assigned
                  </span>
                  <span />
                </div>
              </div>
              <div
                class="makeStyles-drawerSection-962"
              >
                <svg
                  class="makeStyles-drawerNotesIcon-963"
                >
                  notes.svg
                </svg>
                <div
                  class="makeStyles-drawerText-966 makeStyles-drawerTextSeparation-968"
                >
                  <span>
                    -
                  </span>
                </div>
              </div>
              <div
                class="makeStyles-drawerSection-962"
              >
                <div
                  class="makeStyles-drawerText-966"
                >
                  <p
                    class="MuiTypography-root makeStyles-deviceAccent-960 makeStyles-entityTitle-969 MuiTypography-body1"
                  >
                    Laptop
                  </p>
                  <div
                    class="makeStyles-drawerMainText-967"
                  >
                    <span>
                      -
                    </span>
                    <span>
                      -
                    </span>
                    <span>
                      -
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="makeStyles-drawerSection-962"
              >
                <div
                  class="makeStyles-drawerColumnDirection-973"
                >
                  <div
                    class="makeStyles-drawerRowDirection-972"
                  >
                    <svg
                      class="makeStyles-drawerMonetizationIcon-965 makeStyles-bpsIconSize-975"
                    >
                      monetization.svg
                    </svg>
                    <div
                      class="makeStyles-drawerText-966 makeStyles-drawerTextSeparation-968"
                    >
                      <span>
                        $
                        -
                      </span>
                      <span>
                        -
                      </span>
                      <span>
                        Invoiced 
                        -
                      </span>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="makeStyles-drawerSection-962"
              >
                <div
                  class="makeStyles-drawerRowDirection-972"
                >
                  <svg
                    class="makeStyles-bpsIconSize-975"
                  >
                    device-status.svg
                  </svg>
                  <div
                    class="makeStyles-drawerText-966 makeStyles-drawerTextSeparation-968"
                  >
                    <span>
                      Order/Purchase Date:
                       
                      
                    </span>
                    <span>
                      Warranty Expiration Date:
                       
                      
                    </span>
                    <span>
                      In Service Date:
                       
                      
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="makeStyles-drawerSection-962"
              >
                <svg
                  class="makeStyles-drawerSecondaryNotesIcon-964"
                >
                  notes.svg
                </svg>
                <div
                  class="makeStyles-drawerText-966 makeStyles-drawerTextSeparation-968"
                >
                  <span>
                    -
                  </span>
                </div>
              </div>
              <div
                class="makeStyles-drawerSection-962"
              >
                <div
                  class="makeStyles-drawerText-966"
                >
                  <p
                    class="MuiTypography-root makeStyles-deviceAccent-960 makeStyles-entityTitle-969 MuiTypography-body1"
                  >
                    Printer
                  </p>
                  <div
                    class="makeStyles-drawerMainText-967"
                  >
                    <span>
                      -
                    </span>
                    <span>
                      -
                    </span>
                    <span>
                      -
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="makeStyles-drawerSection-962"
              >
                <div
                  class="makeStyles-drawerColumnDirection-973"
                >
                  <div
                    class="makeStyles-drawerRowDirection-972"
                  >
                    <svg
                      class="makeStyles-drawerMonetizationIcon-965"
                    >
                      monetization.svg
                    </svg>
                    <div
                      class="makeStyles-drawerText-966 makeStyles-drawerTextSeparation-968"
                    >
                      <span>
                        $
                        -
                      </span>
                      <span>
                        -
                      </span>
                      <span>
                        Invoiced 
                        -
                      </span>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="makeStyles-drawerSection-962"
              >
                <div
                  class="makeStyles-drawerRowDirection-972"
                >
                  <svg
                    class="makeStyles-bpsIconSize-975"
                  >
                    device-status.svg
                  </svg>
                  <div
                    class="makeStyles-drawerText-966 makeStyles-drawerTextSeparation-968"
                  >
                    <span>
                      Order/Purchase Date:
                       
                      
                    </span>
                    <span>
                      Warranty Expiration Date:
                       
                      
                    </span>
                    <span>
                      Last Maintenance Date:
                       
                      
                    </span>
                    <span>
                      In Service Date:
                       
                      
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="makeStyles-drawerSection-962"
              >
                <svg
                  class="makeStyles-drawerSecondaryNotesIcon-964"
                >
                  notes.svg
                </svg>
                <div
                  class="makeStyles-drawerText-966 makeStyles-drawerTextSeparation-968"
                >
                  <span>
                    -
                  </span>
                </div>
              </div>
              <div
                class="makeStyles-drawerSection-962"
              >
                <div
                  class="makeStyles-drawerText-966"
                >
                  <p
                    class="MuiTypography-root makeStyles-deviceAccent-960 makeStyles-entityTitle-969 MuiTypography-body1"
                  >
                    Scanner
                  </p>
                  <div
                    class="makeStyles-drawerMainText-967"
                  >
                    <span>
                      -
                    </span>
                    <span>
                      -
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="makeStyles-drawerSection-962"
              >
                <div
                  class="makeStyles-drawerColumnDirection-973"
                >
                  <div
                    class="makeStyles-drawerRowDirection-972"
                  >
                    <svg
                      class="makeStyles-drawerMonetizationIcon-965"
                    >
                      monetization.svg
                    </svg>
                    <div
                      class="makeStyles-drawerText-966 makeStyles-drawerTextSeparation-968"
                    >
                      <span>
                        $
                        -
                      </span>
                      <span>
                        -
                      </span>
                      <span>
                        Invoiced 
                        -
                      </span>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="makeStyles-drawerSection-962"
              >
                <div
                  class="makeStyles-drawerRowDirection-972"
                >
                  <svg
                    class="makeStyles-bpsIconSize-975"
                  >
                    device-status.svg
                  </svg>
                  <div
                    class="makeStyles-drawerText-966 makeStyles-drawerTextSeparation-968"
                  >
                    <span>
                      Order/Purchase Date:
                       
                      
                    </span>
                    <span>
                      Warranty Expiration Date:
                       
                      
                    </span>
                    <span>
                      In Service Date:
                       
                      
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="makeStyles-drawerSection-962"
              >
                <svg
                  class="makeStyles-drawerSecondaryNotesIcon-964"
                >
                  notes.svg
                </svg>
                <div
                  class="makeStyles-drawerText-966 makeStyles-drawerTextSeparation-968"
                >
                  <span>
                    -
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
        <hr
          class="MuiDivider-root makeStyles-drawerDivider-887"
        />
        <div
          class="makeStyles-ctaWrapper-931"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`BadgePrinterSystemTab should open device drawer 1`] = `
<div>
  <div
    class="makeStyles-filterActionsContainer-309 makeStyles-filterActionsContainerPadding-311"
  >
    <div
      class="MuiBox-root MuiBox-root-364 makeStyles-filterStatusContainer-312 makeStyles-leftFilterStatusContainer-316"
    >
      <div
        class="makeStyles-floatingFilterWrapper-318 makeStyles-filterWrapper-317  floatingFilterWrapper"
      >
        <span
          class="makeStyles-floatingFilterButton-319"
          data-testid="controlled-button"
          tabindex="-1"
        >
          <button
            aria-controls="false"
            aria-haspopup="true"
            class="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-buttonFilter-327"
            data-testid="button-filter-open"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label"
            >
              All Status
              <span
                class="MuiButton-endIcon MuiButton-iconSizeMedium"
              >
                <svg
                  class="makeStyles-dropdownIcon-321"
                >
                  expand.svg
                </svg>
              </span>
            </span>
          </button>
        </span>
      </div>
    </div>
  </div>
  <table
    aria-label="device-list"
    class="MuiTable-root"
  >
    <thead
      class="MuiTableHead-root"
    >
      <tr
        class="MuiTableRow-root MuiTableRow-head"
      >
        <th
          class="MuiTableCell-root MuiTableCell-head"
          scope="col"
        >
          Name
        </th>
        <th
          class="MuiTableCell-root MuiTableCell-head"
          scope="col"
        >
          Project
        </th>
        <th
          class="MuiTableCell-root MuiTableCell-head"
          scope="col"
        >
          Shipping Date
        </th>
        <th
          class="MuiTableCell-root MuiTableCell-head"
          scope="col"
        >
          Status
        </th>
      </tr>
    </thead>
    <tbody
      class="MuiTableBody-root"
    >
      <tr
        class="MuiTableRow-root WithStyles(ForwardRef(TableRow))-root-400 makeStyles-clickableRow-398"
        data-testid="device-list-row"
      >
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          Badge Printer Name
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          -
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          -
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          <div
            class="MuiChip-root makeStyles-statusChip-365 makeStyles-assigned-369  MuiChip-colorPrimary"
          >
            <span
              class="MuiChip-label"
            >
              Assigned
            </span>
          </div>
        </td>
      </tr>
      <tr
        class="MuiTableRow-root WithStyles(ForwardRef(TableRow))-root-400 makeStyles-clickableRow-398"
        data-testid="device-list-row"
      >
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          Badge Printer Name
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          -
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          08/03/2015
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          <div
            class="MuiChip-root makeStyles-statusChip-365 makeStyles-available-370  MuiChip-colorPrimary"
          >
            <span
              class="MuiChip-label"
            >
              Available
            </span>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
  <nav
    aria-label="pagination navigation"
    class="MuiPagination-root  makeStyles-pagination-401"
    data-testid="pagination"
  >
    <ul
      class="MuiPagination-ul"
    >
      <li>
        <button
          aria-label="Go to previous page"
          class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page Mui-disabled Mui-disabled"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiPaginationItem-icon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
            />
          </svg>
        </button>
      </li>
      <li>
        <button
          aria-current="true"
          aria-label="page 1"
          class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page Mui-selected"
          tabindex="0"
          type="button"
        >
          1
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </li>
      <li>
        <button
          aria-label="Go to next page"
          class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page Mui-disabled Mui-disabled"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiPaginationItem-icon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
            />
          </svg>
        </button>
      </li>
    </ul>
  </nav>
  <div
    class="MuiDrawer-root MuiDrawer-docked makeStyles-drawer-433 makeStyles-close-444 closed"
    data-testid="bps-drawer-detail"
  >
    <div
      class="MuiPaper-root MuiDrawer-paper makeStyles-drawerPaper-434 MuiDrawer-paperAnchorRight MuiDrawer-paperAnchorDockedRight MuiPaper-elevation0"
      style="visibility: hidden; webkit-transform: translateX(1024px) translateX(0px); transform: translateX(1024px) translateX(0px);"
    >
      <div
        class="makeStyles-drawerButtonWrapper-436"
      >
        <div
          class="makeStyles-drawerButton-437"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-text"
            data-testid="drawer-close-btn"
            style="outline: none;"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label"
            >
              <svg>
                close.svg
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
        <div
          class="makeStyles-drawerHeader-435"
        >
          <p
            class="MuiTypography-root makeStyles-drawerTitle-438 MuiTypography-body1 MuiTypography-colorPrimary MuiTypography-alignLeft"
          >
            BPS Information
          </p>
        </div>
      </div>
      <div
        class="makeStyles-listDetail-390"
      >
        <div
          class="makeStyles-summaryDeviceDetail-450"
        >
          <div
            class="makeStyles-company-454"
          >
            <div
              class="makeStyles-drawerOverflowWrapper-469"
            >
              <div
                class="makeStyles-drawerText-461"
              >
                <p
                  class="MuiTypography-root makeStyles-deviceAccent-455 makeStyles-entityTitle-464 MuiTypography-body1"
                >
                  Badge Printer Name
                </p>
                <div
                  class="makeStyles-drawerMainText-462"
                >
                  <span>
                    No project assigned
                  </span>
                  <span>
                    Available
                  </span>
                </div>
              </div>
              <div
                class="makeStyles-drawerSection-457"
              >
                <svg
                  class="makeStyles-drawerNotesIcon-458"
                >
                  notes.svg
                </svg>
                <div
                  class="makeStyles-drawerText-461 makeStyles-drawerTextSeparation-463"
                >
                  <span>
                    some notes
                  </span>
                </div>
              </div>
              <div
                class="makeStyles-drawerSection-457"
              >
                <div
                  class="makeStyles-drawerText-461"
                >
                  <p
                    class="MuiTypography-root makeStyles-deviceAccent-455 makeStyles-entityTitle-464 MuiTypography-body1"
                  >
                    Laptop
                  </p>
                  <div
                    class="makeStyles-drawerMainText-462"
                  >
                    <span>
                      AFF12903112
                    </span>
                    <span>
                      thinkpad x1
                    </span>
                    <span>
                      18.0.1
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="makeStyles-drawerSection-457"
              >
                <div
                  class="makeStyles-drawerColumnDirection-468"
                >
                  <div
                    class="makeStyles-drawerRowDirection-467"
                  >
                    <svg
                      class="makeStyles-drawerMonetizationIcon-460 makeStyles-bpsIconSize-470"
                    >
                      monetization.svg
                    </svg>
                    <div
                      class="makeStyles-drawerText-461 makeStyles-drawerTextSeparation-463"
                    >
                      <span>
                        $
                        3200
                      </span>
                      <span>
                        Lenovo
                      </span>
                      <span>
                        Invoiced 
                        invoice number
                      </span>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="makeStyles-drawerSection-457"
              >
                <div
                  class="makeStyles-drawerRowDirection-467"
                >
                  <svg
                    class="makeStyles-bpsIconSize-470"
                  >
                    device-status.svg
                  </svg>
                  <div
                    class="makeStyles-drawerText-461 makeStyles-drawerTextSeparation-463"
                  >
                    <span>
                      Order/Purchase Date:
                       
                      08/03/2015
                    </span>
                    <span>
                      Warranty Expiration Date:
                       
                      08/03/2015
                    </span>
                    <span>
                      In Service Date:
                       
                      08/03/2015
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="makeStyles-drawerSection-457"
              >
                <div
                  class="makeStyles-drawerRowDirection-467"
                >
                  <svg
                    class="makeStyles-drawerSecondaryNotesIcon-459"
                  >
                    notes.svg
                  </svg>
                  <div
                    class="makeStyles-drawerText-461 makeStyles-drawerTextSeparation-463"
                  >
                    <span>
                      notes
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="makeStyles-drawerSection-457"
              >
                <div
                  class="makeStyles-drawerText-461"
                >
                  <p
                    class="MuiTypography-root makeStyles-deviceAccent-455 makeStyles-entityTitle-464 MuiTypography-body1"
                  >
                    Printer
                  </p>
                  <div
                    class="makeStyles-drawerMainText-462"
                  >
                    <span>
                      Zebra
                    </span>
                    <span>
                      12904328913
                    </span>
                    <span>
                      model type
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="makeStyles-drawerSection-457"
              >
                <div
                  class="makeStyles-drawerColumnDirection-468"
                >
                  <div
                    class="makeStyles-drawerRowDirection-467"
                  >
                    <svg
                      class="makeStyles-drawerMonetizationIcon-460"
                    >
                      monetization.svg
                    </svg>
                    <div
                      class="makeStyles-drawerText-461 makeStyles-drawerTextSeparation-463"
                    >
                      <span>
                        $
                        300
                      </span>
                      <span>
                        vendor
                      </span>
                      <span>
                        Invoiced 
                        invoice
                      </span>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="makeStyles-drawerSection-457"
              >
                <div
                  class="makeStyles-drawerRowDirection-467"
                >
                  <svg
                    class="makeStyles-bpsIconSize-470"
                  >
                    device-status.svg
                  </svg>
                  <div
                    class="makeStyles-drawerText-461 makeStyles-drawerTextSeparation-463"
                  >
                    <span>
                      Order/Purchase Date:
                       
                      08/03/2015
                    </span>
                    <span>
                      Warranty Expiration Date:
                       
                      08/03/2015
                    </span>
                    <span>
                      Last Maintenance Date:
                       
                      08/03/2015
                    </span>
                    <span>
                      In Service Date:
                       
                      08/03/2015
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="makeStyles-drawerSection-457"
              >
                <div
                  class="makeStyles-drawerRowDirection-467"
                >
                  <svg
                    class="makeStyles-drawerSecondaryNotesIcon-459"
                  >
                    notes.svg
                  </svg>
                  <div
                    class="makeStyles-drawerText-461 makeStyles-drawerTextSeparation-463"
                  >
                    <span>
                      some note
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="makeStyles-drawerSection-457"
              >
                <div
                  class="makeStyles-drawerText-461"
                >
                  <p
                    class="MuiTypography-root makeStyles-deviceAccent-455 makeStyles-entityTitle-464 MuiTypography-body1"
                  >
                    Scanner
                  </p>
                  <div
                    class="makeStyles-drawerMainText-462"
                  >
                    <span>
                      BBF19021
                    </span>
                    <span>
                      model
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="makeStyles-drawerSection-457"
              >
                <div
                  class="makeStyles-drawerColumnDirection-468"
                >
                  <div
                    class="makeStyles-drawerRowDirection-467"
                  >
                    <svg
                      class="makeStyles-drawerMonetizationIcon-460"
                    >
                      monetization.svg
                    </svg>
                    <div
                      class="makeStyles-drawerText-461 makeStyles-drawerTextSeparation-463"
                    >
                      <span>
                        $
                        1000
                      </span>
                      <span>
                        vendor
                      </span>
                      <span>
                        Invoiced 
                        invoice
                      </span>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="makeStyles-drawerSection-457"
              >
                <div
                  class="makeStyles-drawerRowDirection-467"
                >
                  <svg
                    class="makeStyles-bpsIconSize-470"
                  >
                    device-status.svg
                  </svg>
                  <div
                    class="makeStyles-drawerText-461 makeStyles-drawerTextSeparation-463"
                  >
                    <span>
                      Order/Purchase Date:
                       
                      08/03/2015
                    </span>
                    <span>
                      Warranty Expiration Date:
                       
                      08/03/2015
                    </span>
                    <span>
                      In Service Date:
                       
                      08/03/2015
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="makeStyles-drawerSection-457"
              >
                <svg
                  class="makeStyles-drawerSecondaryNotesIcon-459"
                >
                  notes.svg
                </svg>
                <div
                  class="makeStyles-drawerText-461 makeStyles-drawerTextSeparation-463"
                >
                  <span>
                    -
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
        <hr
          class="MuiDivider-root makeStyles-drawerDivider-405"
        />
        <div
          class="makeStyles-ctaWrapper-393"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`BadgePrinterSystemTab should render 1`] = `
<div>
  <div
    class="makeStyles-filterActionsContainer-12 makeStyles-filterActionsContainerPadding-14"
  >
    <div
      class="MuiBox-root MuiBox-root-67 makeStyles-filterStatusContainer-15 makeStyles-leftFilterStatusContainer-19"
    >
      <div
        class="makeStyles-floatingFilterWrapper-21 makeStyles-filterWrapper-20  floatingFilterWrapper"
      >
        <span
          class="makeStyles-floatingFilterButton-22"
          data-testid="controlled-button"
          tabindex="-1"
        >
          <button
            aria-controls="false"
            aria-haspopup="true"
            class="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-buttonFilter-30"
            data-testid="button-filter-open"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label"
            >
              All Status
              <span
                class="MuiButton-endIcon MuiButton-iconSizeMedium"
              >
                <svg
                  class="makeStyles-dropdownIcon-24"
                >
                  expand.svg
                </svg>
              </span>
            </span>
          </button>
        </span>
      </div>
    </div>
  </div>
  Loading...
  <div
    class="MuiDrawer-root MuiDrawer-docked makeStyles-drawer-122 makeStyles-close-133 closed"
    data-testid="bps-drawer-detail"
  >
    <div
      class="MuiPaper-root MuiDrawer-paper makeStyles-drawerPaper-123 MuiDrawer-paperAnchorRight MuiDrawer-paperAnchorDockedRight MuiPaper-elevation0"
      style="visibility: hidden; webkit-transform: translateX(1024px) translateX(0px); transform: translateX(1024px) translateX(0px);"
    >
      <div
        class="makeStyles-drawerButtonWrapper-125"
      >
        <div
          class="makeStyles-drawerButton-126"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-text"
            data-testid="drawer-close-btn"
            style="outline: none;"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label"
            >
              <svg>
                close.svg
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
        <div
          class="makeStyles-drawerHeader-124"
        >
          <p
            class="MuiTypography-root makeStyles-drawerTitle-127 MuiTypography-body1 MuiTypography-colorPrimary MuiTypography-alignLeft"
          >
            BPS Information
          </p>
        </div>
      </div>
      <div
        class="makeStyles-listDetail-112"
      >
        <div
          class="makeStyles-summaryDeviceDetail-139"
        >
          <div
            class="makeStyles-company-143"
          >
            <div
              class="makeStyles-drawerOverflowWrapper-158"
            >
              <div
                class="makeStyles-drawerText-150"
              >
                <p
                  class="MuiTypography-root makeStyles-deviceAccent-144 makeStyles-entityTitle-153 MuiTypography-body1"
                />
                <div
                  class="makeStyles-drawerMainText-151"
                >
                  <span>
                    No project assigned
                  </span>
                  <span />
                </div>
              </div>
              <div
                class="makeStyles-drawerSection-146"
              >
                <svg
                  class="makeStyles-drawerNotesIcon-147"
                >
                  notes.svg
                </svg>
                <div
                  class="makeStyles-drawerText-150 makeStyles-drawerTextSeparation-152"
                >
                  <span>
                    -
                  </span>
                </div>
              </div>
              <div
                class="makeStyles-drawerSection-146"
              >
                <div
                  class="makeStyles-drawerText-150"
                >
                  <p
                    class="MuiTypography-root makeStyles-deviceAccent-144 makeStyles-entityTitle-153 MuiTypography-body1"
                  >
                    Laptop
                  </p>
                  <div
                    class="makeStyles-drawerMainText-151"
                  >
                    <span>
                      -
                    </span>
                    <span>
                      -
                    </span>
                    <span>
                      -
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="makeStyles-drawerSection-146"
              >
                <div
                  class="makeStyles-drawerColumnDirection-157"
                >
                  <div
                    class="makeStyles-drawerRowDirection-156"
                  >
                    <svg
                      class="makeStyles-drawerMonetizationIcon-149 makeStyles-bpsIconSize-159"
                    >
                      monetization.svg
                    </svg>
                    <div
                      class="makeStyles-drawerText-150 makeStyles-drawerTextSeparation-152"
                    >
                      <span>
                        $
                        -
                      </span>
                      <span>
                        -
                      </span>
                      <span>
                        Invoiced 
                        -
                      </span>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="makeStyles-drawerSection-146"
              >
                <div
                  class="makeStyles-drawerRowDirection-156"
                >
                  <svg
                    class="makeStyles-bpsIconSize-159"
                  >
                    device-status.svg
                  </svg>
                  <div
                    class="makeStyles-drawerText-150 makeStyles-drawerTextSeparation-152"
                  >
                    <span>
                      Order/Purchase Date:
                       
                      
                    </span>
                    <span>
                      Warranty Expiration Date:
                       
                      
                    </span>
                    <span>
                      In Service Date:
                       
                      
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="makeStyles-drawerSection-146"
              >
                <svg
                  class="makeStyles-drawerSecondaryNotesIcon-148"
                >
                  notes.svg
                </svg>
                <div
                  class="makeStyles-drawerText-150 makeStyles-drawerTextSeparation-152"
                >
                  <span>
                    -
                  </span>
                </div>
              </div>
              <div
                class="makeStyles-drawerSection-146"
              >
                <div
                  class="makeStyles-drawerText-150"
                >
                  <p
                    class="MuiTypography-root makeStyles-deviceAccent-144 makeStyles-entityTitle-153 MuiTypography-body1"
                  >
                    Printer
                  </p>
                  <div
                    class="makeStyles-drawerMainText-151"
                  >
                    <span>
                      -
                    </span>
                    <span>
                      -
                    </span>
                    <span>
                      -
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="makeStyles-drawerSection-146"
              >
                <div
                  class="makeStyles-drawerColumnDirection-157"
                >
                  <div
                    class="makeStyles-drawerRowDirection-156"
                  >
                    <svg
                      class="makeStyles-drawerMonetizationIcon-149"
                    >
                      monetization.svg
                    </svg>
                    <div
                      class="makeStyles-drawerText-150 makeStyles-drawerTextSeparation-152"
                    >
                      <span>
                        $
                        -
                      </span>
                      <span>
                        -
                      </span>
                      <span>
                        Invoiced 
                        -
                      </span>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="makeStyles-drawerSection-146"
              >
                <div
                  class="makeStyles-drawerRowDirection-156"
                >
                  <svg
                    class="makeStyles-bpsIconSize-159"
                  >
                    device-status.svg
                  </svg>
                  <div
                    class="makeStyles-drawerText-150 makeStyles-drawerTextSeparation-152"
                  >
                    <span>
                      Order/Purchase Date:
                       
                      
                    </span>
                    <span>
                      Warranty Expiration Date:
                       
                      
                    </span>
                    <span>
                      Last Maintenance Date:
                       
                      
                    </span>
                    <span>
                      In Service Date:
                       
                      
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="makeStyles-drawerSection-146"
              >
                <svg
                  class="makeStyles-drawerSecondaryNotesIcon-148"
                >
                  notes.svg
                </svg>
                <div
                  class="makeStyles-drawerText-150 makeStyles-drawerTextSeparation-152"
                >
                  <span>
                    -
                  </span>
                </div>
              </div>
              <div
                class="makeStyles-drawerSection-146"
              >
                <div
                  class="makeStyles-drawerText-150"
                >
                  <p
                    class="MuiTypography-root makeStyles-deviceAccent-144 makeStyles-entityTitle-153 MuiTypography-body1"
                  >
                    Scanner
                  </p>
                  <div
                    class="makeStyles-drawerMainText-151"
                  >
                    <span>
                      -
                    </span>
                    <span>
                      -
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="makeStyles-drawerSection-146"
              >
                <div
                  class="makeStyles-drawerColumnDirection-157"
                >
                  <div
                    class="makeStyles-drawerRowDirection-156"
                  >
                    <svg
                      class="makeStyles-drawerMonetizationIcon-149"
                    >
                      monetization.svg
                    </svg>
                    <div
                      class="makeStyles-drawerText-150 makeStyles-drawerTextSeparation-152"
                    >
                      <span>
                        $
                        -
                      </span>
                      <span>
                        -
                      </span>
                      <span>
                        Invoiced 
                        -
                      </span>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="makeStyles-drawerSection-146"
              >
                <div
                  class="makeStyles-drawerRowDirection-156"
                >
                  <svg
                    class="makeStyles-bpsIconSize-159"
                  >
                    device-status.svg
                  </svg>
                  <div
                    class="makeStyles-drawerText-150 makeStyles-drawerTextSeparation-152"
                  >
                    <span>
                      Order/Purchase Date:
                       
                      
                    </span>
                    <span>
                      Warranty Expiration Date:
                       
                      
                    </span>
                    <span>
                      In Service Date:
                       
                      
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="makeStyles-drawerSection-146"
              >
                <svg
                  class="makeStyles-drawerSecondaryNotesIcon-148"
                >
                  notes.svg
                </svg>
                <div
                  class="makeStyles-drawerText-150 makeStyles-drawerTextSeparation-152"
                >
                  <span>
                    -
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
        <hr
          class="MuiDivider-root makeStyles-drawerDivider-71"
        />
        <div
          class="makeStyles-ctaWrapper-115"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`BadgePrinterSystemTab should show loading 1`] = `
<div>
  <div
    class="makeStyles-filterActionsContainer-171 makeStyles-filterActionsContainerPadding-173"
  >
    <div
      class="MuiBox-root MuiBox-root-226 makeStyles-filterStatusContainer-174 makeStyles-leftFilterStatusContainer-178"
    >
      <div
        class="makeStyles-floatingFilterWrapper-180 makeStyles-filterWrapper-179  floatingFilterWrapper"
      >
        <span
          class="makeStyles-floatingFilterButton-181"
          data-testid="controlled-button"
          tabindex="-1"
        >
          <button
            aria-controls="false"
            aria-haspopup="true"
            class="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-buttonFilter-189"
            data-testid="button-filter-open"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label"
            >
              All Status
              <span
                class="MuiButton-endIcon MuiButton-iconSizeMedium"
              >
                <svg
                  class="makeStyles-dropdownIcon-183"
                >
                  expand.svg
                </svg>
              </span>
            </span>
          </button>
        </span>
      </div>
    </div>
  </div>
  Loading...
  <div
    class="MuiDrawer-root MuiDrawer-docked makeStyles-drawer-281 makeStyles-close-292 closed"
    data-testid="bps-drawer-detail"
  >
    <div
      class="MuiPaper-root MuiDrawer-paper makeStyles-drawerPaper-282 MuiDrawer-paperAnchorRight MuiDrawer-paperAnchorDockedRight MuiPaper-elevation0"
      style="visibility: hidden; webkit-transform: translateX(1024px) translateX(0px); transform: translateX(1024px) translateX(0px);"
    >
      <div
        class="makeStyles-drawerButtonWrapper-284"
      >
        <div
          class="makeStyles-drawerButton-285"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-text"
            data-testid="drawer-close-btn"
            style="outline: none;"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label"
            >
              <svg>
                close.svg
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
        <div
          class="makeStyles-drawerHeader-283"
        >
          <p
            class="MuiTypography-root makeStyles-drawerTitle-286 MuiTypography-body1 MuiTypography-colorPrimary MuiTypography-alignLeft"
          >
            BPS Information
          </p>
        </div>
      </div>
      <div>
        Loading...
      </div>
    </div>
  </div>
</div>
`;
